# cpp_scalian

./: .gitignore  README.md
diapos/: CPP_Intro.pptx  CPP_aprem.pptx  CPP_matin.pptx  essentiel.docx
essentiel/: Les Essentiels.pptx
exercices/: CMakeLists.txt  build.bat
exercices/compilerOptions/optim/: build_and_run_solution.bat  optim.cpp  optim.pro
exercices/compilerOptions/warnings/: build_and_run_solution.bat  warnings.cpp  warnings.pro
exercices/lambdas/: main.cpp
exercices/precompiledHeader/nmake/: applib.cpp  myapp.cpp  nmake
exercices/precompiledHeader/qmake/: build_and_run_solution.bat  headers.h  visual.pro
exercices/precompiledHeader/visual/visual/: headers.h  visual.cpp
exercices/toolchain/diff_set/: classique.txt  invite_visual.txt
exercices/toolchain/src/helloworld/: helloworld.cpp
exercices/toolchain/src/testlink_dynamic/: bar.cpp  bar.h  foo.cpp  foo.h  main.cpp
exercices/toolchain/src/testlink_static/: bar.cpp  bar.h  foo.cpp  foo.h
exercices/toolchain/src/testlink_visual/: foobar.lib  main.cpp
solutions/compilerOptions/warnings/: warnings.cpp
solutions/lambdas/: main.cpp
